# tropai-2024

./: .gitignore  README.md
day1/: README.md  pyproject.toml  solutions_PPLs_Intro.ipynb  students_PPLs_Intro.ipynb
day2/: README.md
day2/notebooks/: BayesianNeuralNetworks.ipynb  CAVI-linreg.ipynb  README.md  pyproject.toml  solution_simple_model.ipynb  solutions_BBVI.ipynb  solutions_VAE.ipynb  students_BBVI.ipynb  students_VAE.ipynb  students_simple_model.ipynb
day3/: README.md
day3/notebooks/: Code_assignment.ipynb  Representation_learning_and_Self_supervised_learning.ipynb  convolutional_gans_gabarito.ipynb  cyclegan.ipynb  gemos_mnist_omniglot.ipynb  mae_visualize.ipynb  mae_vit.ipynb  tiny_nerf.ipynb  variational_autoencoder.ipynb
day4/: README.md
day4/notebooks/: llampl-tutorial.ipynb
